harness/test/errors/090_bad_format_string.eu
# Error: str.fmt called with a full template instead of a bare %-specifier
x: str.fmt(42, "Value is %d")
